--- a/RefreshToAccess/MainWindow.xaml
+++ b/RefreshToAccess/MainWindow.xaml
@@ -7,22 +7,25 @@
         xmlns:local="clr-namespace:RefreshToAccess"
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="RefreshToAccess.MainWindow"
         mc:Ignorable="d"
-        Title="RefreshToken To AccessToken 1.3 Holy fucking update" Height="400" Width="820" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Cursor="">
+        Title="RefreshToken To AccessToken 1.4.1" Height="400" Width="820" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Grid Cursor="" Margin="0,0,0,0">
-        <Button Content="Convert" HorizontalAlignment="Left" Height="90" Margin="31,103,0,0" VerticalAlignment="Top" Width="176" FontSize="30" Click="Button_Click"/>
-        <TextBox HorizontalAlignment="Right" x:Name="RefreshBox" Margin="0,60,38,0" TextWrapping="Wrap" Text="Your RefreshToken here..." MouseLeftButtonDown="RefreshBox_MouseLeftButtonDown" MouseDown="RefreshBox_MouseLeftButtonDown" PreviewMouseDown="RefreshBox_MouseLeftButtonDown" PreviewMouseLeftButtonDown="RefreshBox_MouseLeftButtonDown" VerticalAlignment="Top" Width="511" Height="40" UndoLimit="98"/>
-        <TextBox HorizontalAlignment="Right" x:Name="AccessBox" Margin="0,119,38,0" TextWrapping="Wrap" Text="Your AccessToken will be here..." MouseLeftButtonDown="AccessBox_MouseLeftButtonDown" MouseDown="AccessBox_MouseLeftButtonDown" PreviewMouseDown="AccessBox_MouseLeftButtonDown" PreviewMouseLeftButtonDown="AccessBox_MouseLeftButtonDown" MouseLeave="AccessBox_MouseLeave" VerticalAlignment="Top" Width="511" Height="40"/>
-        <Label x:Name="Indicator" Content="" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="10,202,0,0" VerticalAlignment="Top" Height="36" Width="218"/>
-        <RadioButton x:Name="tokenIsHmcl" Content="RefreshToken is in HMCL format" HorizontalAlignment="Left" Margin="271,193,0,0" VerticalAlignment="Top" Checked="tokenIsHmcl_Checked" IsChecked="False" />
-        <RadioButton x:Name="tokenIsLunar" Content="RefreshToken is in vanilla format" HorizontalAlignment="Left" Margin="271,174,0,0" VerticalAlignment="Top" Checked="tokenIsLunar_Checked" IsChecked="False"/>
-        <RadioButton x:Name="tokenIsElse" Content="RefreshToken is in other formats" HorizontalAlignment="Left" Margin="271,212,0,0" VerticalAlignment="Top" Checked="tokenIsElse_Checked" IsChecked="False" />
-        <Button Content="Copy Accesstoken to clipboard" HorizontalAlignment="Left" Margin="526,170,0,0" VerticalAlignment="Top" Click="Button_Click_1" Width="256" Height="64" Cursor="Hand"/>
-        <Label Content="Player Profile Name:" HorizontalAlignment="Left" Margin="169,263,0,0" VerticalAlignment="Top"/>
-        <Label Content="Player Profile UUID:" HorizontalAlignment="Left" Margin="169,297,0,0" VerticalAlignment="Top" Width="124"/>
-        <TextBox x:Name="IGNBox" HorizontalAlignment="Left" Margin="298,262,0,0" TextWrapping="Wrap" Text="Waiting for login..."  VerticalAlignment="Top" Width="304" TextChanged="IGNBox_TextChanged"/>
-        <TextBox x:Name="UUIDBox" HorizontalAlignment="Left" Margin="298,295,0,0" TextWrapping="Wrap" Text="Waiting for login..."  VerticalAlignment="Top" Width="305" TextChanged="UUIDBox_TextChanged"/>
-        <Button Content="Copy" FontSize="10" HorizontalAlignment="Left" Margin="606,256,0,0" VerticalAlignment="Top" Height="29" Click="Button_Click_3"/>
-        <Button Content="Copy" FontSize="10" HorizontalAlignment="Left" Margin="606,290,0,0" VerticalAlignment="Top" Height="30" Click="Button_Click_4"/>
+        <Button Content="Convert" materialDesign:ButtonAssist.CornerRadius="10" HorizontalAlignment="Left" Height="90" Margin="34,63,0,0" VerticalAlignment="Top" Width="202" FontSize="30" Click="Button_Click"/>
+        <TextBox HorizontalAlignment="Right" IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}" Style="{StaticResource MaterialDesignOutlinedTextBox}" materialDesign:HintAssist.Hint="Refresh Token"  x:Name="RefreshBox" FontFamily="Consolas" VerticalScrollBarVisibility="Auto" Margin="0,24,37,0" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Top" Width="511" Height="77" UndoLimit="98"/>
+        <TextBox HorizontalAlignment="Right" x:Name="AccessBox" materialDesign:HintAssist.Hint="Access Token" IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}" Style="{StaticResource MaterialDesignOutlinedTextBox}" FontFamily="Consolas" VerticalScrollBarVisibility="Auto" Margin="0,106,37,0" TextWrapping="Wrap" Text="{Binding Name}"  VerticalAlignment="Top" Width="512" Height="76"/>
+        <Label x:Name="Indicator" Content="" FontFamily="Cordia New" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0,329,0,0" VerticalAlignment="Top" Height="38" Width="216"/>
+        <RadioButton x:Name="tokenIsHmcl"  Content="RefreshToken is in HMCL format" HorizontalAlignment="Left" Margin="271,215,0,0" VerticalAlignment="Top" Checked="tokenIsHmcl_Checked" IsChecked="False" />
+        <RadioButton x:Name="tokenIsLunar" Content="RefreshToken is in Vanilla format" HorizontalAlignment="Left" Margin="271,197,0,0" VerticalAlignment="Top" Checked="tokenIsLunar_Checked" IsChecked="False"/>
+        <RadioButton x:Name="tokenIsElse" Content="RefreshToken is in other formats" HorizontalAlignment="Left" Margin="271,233,0,0" VerticalAlignment="Top" Checked="tokenIsElse_Checked" IsChecked="False" />
+        <Button Content="Copy Accesstoken to clipboard" materialDesign:ButtonAssist.CornerRadius="10" HorizontalAlignment="Left" Margin="527,192,0,0" VerticalAlignment="Top" Click="Button_Click_1" Width="246" Height="64" Cursor="Hand"/>
+        <Label Content="Player Profile Name:" HorizontalAlignment="Left" Margin="35,270,0,0" VerticalAlignment="Top"/>
+        <Label Content="Player Profile UUID:" HorizontalAlignment="Left" Margin="35,304,0,0" VerticalAlignment="Top" Width="124"/>
+        <TextBox x:Name="IGNBox" HorizontalAlignment="Left" Margin="163,269,0,0" TextWrapping="Wrap" Text="Waiting for login..."  VerticalAlignment="Top" Width="288" TextChanged="IGNBox_TextChanged"/>
+        <TextBox x:Name="UUIDBox" HorizontalAlignment="Left" Margin="163,302,0,0" TextWrapping="Wrap" Text="Waiting for login..."  VerticalAlignment="Top" Width="288" TextChanged="UUIDBox_TextChanged"/>
+        <Button Content="Copy" FontSize="10" materialDesign:ButtonAssist.CornerRadius="10" HorizontalAlignment="Left" Margin="457,265,0,0" VerticalAlignment="Top" Height="30" Click="Button_Click_3"/>
+        <Button Content="Copy" FontSize="10" materialDesign:ButtonAssist.CornerRadius="10" HorizontalAlignment="Left" Margin="457,297,0,0" VerticalAlignment="Top" Height="30" Click="Button_Click_4"/>
+        <Button Content="Mincraft Profile Name Edit" materialDesign:ButtonAssist.CornerRadius="10" HorizontalAlignment="Left" Margin="527,263,0,0" VerticalAlignment="Top" Height="64" Width="246" Click="EditPfName"/>
+        <CheckBox x:Name="AccTokenCopy"  Content="AccessToken auto copy" IsChecked="true" FontSize="13"  VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="47,192,0,0" VerticalAlignment="Top" Height="46" Width="176"/>
 
     </Grid>
+
 </Window>
